--- a/home.css
+++ b/home.css
@@ -66,6 +66,7 @@ header nav ul li a {
     color: #fff;
     padding: 10px 20px;
     text-decoration: none;
+    border-radius: 100px;
 }
 .hero {
     background-image: url("banner.jpg");
