--- a/frontend/css/home.css
+++ b/frontend/css/home.css
@@ -64,7 +64,7 @@ header nav ul li a {
   
     background: #333;
     color: #fff;
-    padding: 10px 20px;
+    padding: 5px 20px;
     text-decoration: none;
     border-radius: 100px;
 }
@@ -115,4 +115,32 @@ footer {
     text-align: center;
     padding: 10px 0;
     margin-top: 20px;
+}
+.search{
+    --padding:14px;
+    display:flex;
+    align-items: center;
+    padding:var(--padding);
+    width: max-content;
+    border-radius: 28px;
+    background-color: #f9f9f9;
+    transition:bbox-shadow 0.25s;
+    margin: 2px;
+}
+ .search:focus-within{
+   box-shadow:0px 0px 2px 2px rgba(0,0,0,0.45)
+}
+.search_input{
+    font-size: 16px;
+    font-family:'Lexend', sans-serif;
+    margin-left:var(--padding); 
+    color: #333333;
+    outline: none;
+    border:none;
+    background: transparent;
+    width:300px;
+}
+.search_input::placeholder,
+        .search_icon{
+    color:rgba(0,0,0,0.35);
 }
